--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,14 @@
   background-color: inherit;
 }
 
+.unselectable {
+  user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -o-user-select: none;
+}
+
 @media only screen and (max-width: 600px) {
   .todoEntry {
     font-size: 23px;
